# ugvc_simulation

./: README.md  README.md~
gazebo_ros_demos/rrbot_description/launch/: crawler_robot.rviz
gazebo_ros_demos/rrbot_description/urdf/: ugvc_crawler_robot.gazebo  ugvc_crawler_robot.xacro  ugvc_robot.xacro
gazebo_ros_demos/rrbot_gazebo/launch/: crawler.launch
ugvc_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ugvc_control/config/: control.yaml  control.yaml~  localization.yaml
ugvc_control/launch/: control.launch  control.launch~  teleop.launch
ugvc_description/: CMakeLists.txt  package.xml
ugvc_description/env-hooks/: ugvc_crawler_robot_description.sh
ugvc_description/launch/: crawler_robot.rviz  crawler_robot_rviz.launch  crawler_robot_rviz.launch~
ugvc_description/materials/scripts/: ugvc_field.material
ugvc_description/meshes/: 1mdrop.dae  1mdrop1.dae  1mdrop2.dae  30slope.dae  30slope1.dae  30slope2.dae  45slope.dae  45slope1.dae  45slope2.dae  50cmstep.dae  50cmstep1.dae  50cmstep2.dae  5mwall.dae  5mwall1.dae  5mwall2.dae  end.dae  flipper_crawler.dae  gate.dae  main_crawler.dae  redbox.dae  redbox1.dae  rope.dae  station.dae  station1.dae  station2.dae
ugvc_description/models/crawler_robot/: crawler_robot.urdf.xacro  mybot.gazebo  mybot.xacro  sensors.urdf.xacro  wheels.urdf.xacro
ugvc_description/models/surus_sim/: model.config
ugvc_description/models/ugvc_30degree_slope/: model.config  model.sdf  model.sdf~
ugvc_description/models/ugvc_45degree_slope/: model.sdf
ugvc_description/models/ugvc_50cm_step/: model.config  model.sdf  model.sdf~
ugvc_description/models/ugvc_crawler_robot/: model.config  model.config~  model.sdf
ugvc_description/models/ugvc_crawler_robot/dae/: flipper_crawler.dae  main_crawler.dae
ugvc_description/models/ugvc_end/: model.config  model.sdf
ugvc_description/models/ugvc_field/: model.config  model.sdf
ugvc_description/models/ugvc_gate/: model.config  model.sdf
ugvc_description/models/ugvc_red_box/: model.config  model.sdf  model.sdf~
ugvc_description/models/ugvc_rope/: model.config  model.sdf  model.sdf~
ugvc_description/models/ugvc_station/: model.config  model.config~  model.sdf
ugvc_description/urdf/: ugvc_crawler_robot.gazebo  ugvc_crawler_robot.gazebo.xacro  ugvc_crawler_robot.urdf.xacro  ugvc_crawler_robot.xacro
ugvc_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ugvc_gazebo/config/: ugvc_gazebo.cfg  ugvc_gazebo.cfg~  ugvc_gazebo.yaml
ugvc_gazebo/env-hooks/: kylin_gazebo.sh
ugvc_gazebo/launch/: crawler.launch  empty_field.launch  empty_field.launch~  spawn_kylin.launch
ugvc_gazebo/urdf/: description.gazebo.xacro  ugvc_crawler_robot.gazebo.xacro
ugvc_gazebo/worlds/: UGVC_field.world
