<?xml version="1.0"?>
<package>
  <name>ugvc_description</name>
  <version>1.0.0</version>
  <description>Describes models and areas of UGVC for Gazebo</description>
  <maintainer email="yajingwang94@gmail.com">Yajing Wang</maintainer>
  <license>BSD</license>
  <author email="yajingwang94@gmail.com">Yajing Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  
  <!-- Important: export the model path to gazebo_ros gazebo -->
	<!-- gazebo_media_path, gazebo_model_path, plugin_path -->
  <export>      
		 <gazebo_ros gazebo_model_path="${prefix}/models/" />
		 <gazebo_ros gazebo_media_path="${prefix}" />
		 <!--gazebo_ros plugin_path="${prefix}/../../../" /-->
  </export>
</package>
